2003-11-29  Scott Dattalo  <scott@dattalo.com>
	* src/16bit-registers.cc - Access to PLUSWx are now signed.
	
2003-11-28  Scott Dattalo  <scott@dattalo.com>
	* gui/* - More C to C++ conversions
	* gui/gui_menu.cc - Patch from Alex Holden to enable compilation on a MAC
	* src/icd.cc
	* INSTALL - added instructions for MAC OS
	
2003-11-24  Scott Dattalo  <scott@dattalo.com>
	* gui/* First round of struct to class conversion is now completed

2003-11-20  Scott Dattalo  <scott@dattalo.com>
	* src/ioports.cc - PORT B pullups were not working 
	* regression/* - Added some more regression tests
	
2003-11-16  Scott Dattalo  <scott@dattalo.com>
	* gui/* More conversions to C++

2003-11-15  Scott Dattalo  <scott@dattalo.com>
	* gui/* started converting gui struct's into C++ classes. Started with 
	Register Window.
	
2003-10-26  Scott Dattalo  <scott@dattalo.com>
	* src/gpsim-time.cc linked-list bug fixes.

2003-10-26  Scott Dattalo  <scott@dattalo.com>
	* eXdbm/* applied patch from  Borut Razem mailto:borut.razem@siol.net to
	fix an uninitialized pointer bug.
	
2003-10-26  Scott Dattalo  <scott@dattalo.com>
	* modules/* removed all references to gui if not building with the gui

2003-09-24  Scott Dattalo  <scott@dattalo.com> (patches from Steve Tell)
	* modules/paraface.h - Solaris patch for bogus device
	* src/cod.cc - Endian bug
	* gui/gui_processor.cc - use memset instead of bzero.
	
2003-09-14  Scott Dattalo  <scott@dattalo.com>
 	* src/gpsim_time.h - changed cycle counter break point from a Singly linked
	list to a doubly linked list. This is in preparation for separating module
	time from pic processor time so that when the PIC goes to sleep, time 
	doesn't stop.
	
2003-09-07  Scott Dattalo  <scott@dattalo.com>
	* src/p16f62x.h - duplicate declaration of intcon register
	
2003-09-07  Scott Dattalo  <scott@dattalo.com>
	* src/breakpoints.cc - this time the 'Too many cycle counter breakpoints' was
	fixed. BTW the problem was that 'clear_break' was not putting the cleared